--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <div>
     <form action="index2.html">
+        <h1>Registration Form</h1>
         <input type="text" name="" id="firstname" placeholder="Firstname" required>
         <input type="text" name="" id="lastname" placeholder="Lastname" required>
         <input type="text" name="" id="email" placeholder="Email" required>
@@ -17,6 +19,8 @@
         <input type="tel" name="" id="phoneNumber" placeholder="Phone Number" required>
         <button onclick="signUp()">Sign-Up</button>
     </form>
+   </div>
     <script src="./index.js"></script>
+    <script src="https://kit.fontawesome.com/c36b48a40a.js" crossorigin="anonymous"></script>
 </body>
 </html>
