--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <input type="text" name="" id="lastname" placeholder="Lastname" required>
         <input type="text" name="" id="email" placeholder="Email" required>
         <input type="password" name="" id="password" placeholder="Password" required>
+        <button type="button" onclick="change()" class="btn1"><i class="fa-solid fa-eye-slash"></i></button>
         <input type="number" name="" id="age" placeholder="Age">
         <input type="tel" name="" id="phoneNumber" placeholder="Phone Number" required>
-        <button onclick="signUp()">Sign-Up</button>
+        <button onclick="signUp()" class="btn2">Sign-Up</button>
     </form>
    </div>
     <script src="./index.js"></script>
