--- a/index2.html
+++ b/index2.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-In Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
-        <input type="text" name="" id="email" placeholder="Email" required>
-        <input type="password" name="" id="password" placeholder="Password" required>
-        <button onclick="signIn()">Sign In</button>
+        <main>
+            <h1>Login Form</h1>
+            <input type="text" name="" id="email" placeholder="Email" required>
+            <input type="password" name="" id="password" placeholder="Password" required>
+            <button type="button" onclick="change()" class="btn1"><i class="fa-solid fa-eye-slash"></i></button>
+            <button class="btn2" onclick="signIn()">Sign In</button>
+        </main>
     </div>
     <script src="index2.js"></script>
+    <script src="https://kit.fontawesome.com/c36b48a40a.js" crossorigin="anonymous"></script>
 </body>
 </html>
