--- a/index3.html
+++ b/index3.html
@@ -13,6 +13,11 @@
 </head>
 <body>
     <h1>Welcome </h1> <h1 class="name"></h1>
+    <p class="email">Email:</p>
+    <p class="matNo">Matric Number: </p>
+    <p class="age">Age: </p>
+    <p class="regDate">Date Registered: </p>
+    <p class="phone">Phone Number:</p>
     <script src="./index3.js"></script>
 </body>
 </html>
