--- a/index2.html
+++ b/index2.html
@@ -13,8 +13,9 @@
             <h1>Login Form</h1>
             <input type="text" name="" id="email" placeholder="Email" required>
             <input type="password" name="" id="password" placeholder="Password" required>
-            <button type="button" onclick="change()" class="btn1"><i class="fa-solid fa-eye-slash"></i></button>
+            <button type="button" onclick="change()" class="btn1 btn"><i class="fa-solid fa-eye-slash"></i></button>
             <button class="btn2" onclick="signIn()">Sign In</button>
+            <p>Not a member? <a href="index.html">Signup now</a></p>
         </main>
     </div>
     <script src="index2.js"></script>
