--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,6 @@
     <p class="age">Age: </p>
     <p class="regDate">Date Registered: </p>
     <p class="phone">Phone Number:</p>
-    <script src="./index3.js"></script>
+    <script src="./dashboard.js"></script>
 </body>
 </html>
