--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
             <p>Not a member? <a href="index.html">Signup now</a></p>
         </main>
     </div>
-    <script src="index2.js"></script>
+    <script src="login.js"></script>
     <script src="https://kit.fontawesome.com/c36b48a40a.js" crossorigin="anonymous"></script>
 </body>
 </html>
