--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <div>
-    <form action="index2.html">
+    <form action="login.html">
         <h1>Registration Form</h1>
         <input type="text" name="" id="firstname" placeholder="Firstname" required>
         <input type="text" name="" id="lastname" placeholder="Lastname" required>
