--- a/login.html
+++ b/login.html
@@ -12,8 +12,10 @@
         <main>
             <h1>Login Form</h1>
             <input type="text" name="" id="email" placeholder="Email" required>
-            <input type="password" name="" id="password" placeholder="Password" required>
-            <button type="button" onclick="change()" class="btn1 btn"><i class="fa-solid fa-eye-slash"></i></button>
+            <div class="cont">
+                <input type="password" name="" id="password" placeholder="Password" required>
+                <button type="button" onclick="change()" class="btn1"><i class="fa-solid fa-eye-slash"></i></button>
+            </div>
             <button class="btn2" onclick="signIn()">Sign In</button>
             <p>Not a member? <a href="index.html">Signup now</a></p>
         </main>
