--- a/adminPage.html
+++ b/adminPage.html
@@ -60,6 +60,6 @@
             </div>
         </div>
     </div>
-    <script src="./index2.js"></script>
+    <script src="./adminPage.js"></script>
 </body>
 </html>
