Delete now working

--- a/adminPage.html
+++ b/adminPage.html
@@ -17,7 +17,7 @@
     <input type="password" placeholder="Password" id="fourth">
     <input type="number" placeholder="Age" id="fifth">
     <input type="tel" placeholder="Phone Number" id="sixth">
-    <button onclick="checkEmail()">Sign up</button>
+    <button onclick="signUp()">Sign up</button>
     <hr>
     <div class="top">
         <h1>All Students</h1>
