--- a/adminPage.html
+++ b/adminPage.html
@@ -58,6 +58,14 @@
                 <label for="fourth2">Password:</label>
                 <input type="text" placeholder="Password" id="fourth2">
             </div>
+            <div class="contfifth">
+                <label for="fifth2">Age:</label>
+                <input type="text" placeholder="age" id="fifth2">
+            </div>
+            <div class="contsixth">
+                <label for="sixth2">Password:</label>
+                <input type="text" placeholder="Password" id="sixth2">
+            </div>
         </div>
     </div>
     <script src="./adminPage.js"></script>
