--- a/adminPage.html
+++ b/adminPage.html
@@ -60,11 +60,11 @@
             </div>
             <div class="contfifth">
                 <label for="fifth2">Age:</label>
-                <input type="text" placeholder="age" id="fifth2">
+                <input type="number" placeholder="Age" id="fifth2">
             </div>
             <div class="contsixth">
-                <label for="sixth2">Password:</label>
-                <input type="text" placeholder="Password" id="sixth2">
+                <label for="sixth2">Phone:</label>
+                <input type="tel" placeholder="Phone Number" id="sixth2">
             </div>
         </div>
     </div>
