A school management system

--- a/adminPage.html
+++ b/adminPage.html
@@ -10,14 +10,14 @@
        
     </style>
 </head>
-<body onload="local()">
+<body onload="getLocal()">
     <input type="text" placeholder="First Name" id="first">
     <input type="text" placeholder="Last Name" id="second">
     <input type="text" placeholder="Email" id="third">
     <input type="password" placeholder="Password" id="fourth">
     <input type="number" placeholder="Age" id="fifth">
-    <input type="tel" placeholder="Phone Number" id="sixth">
-    <button onclick="signUp()">Sign up</button>
+    <input type="number" placeholder="Phone Number" id="sixth">
+    <button onclick="checkEmpty()">Sign up</button>
     <hr>
     <div class="top">
         <h1>All Students</h1>
