--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         </div>
         <input type="number" name="" id="age" placeholder="Age">
         <input type="tel" name="" id="phoneNumber" placeholder="Phone Number" required>
-        <button onclick="signUp()" class="btn2">Sign-Up</button>
+        <button onclick="checkEmail()" class="btn2">Sign-Up</button>
+        <p>Already have an account? <a href="login.html">Click here to login</a></p>
     </form>
    </div>
     <script src="./index.js"></script>
