--- a/login.html
+++ b/login.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-In Page</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .wrong {
+            margin: 0;
+            font-size: 0.9rem;
+            display: none;
+            color: rgb(170,68,176);
+        }
+        .cont {
+            transition: 300ms;
+            height: 0;
+            overflow: hidden;
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <div>
@@ -16,7 +30,8 @@
                 <input type="password" name="" id="password" placeholder="Password" required>
                 <button type="button" onclick="change()" class="btn1"><i class="fa-solid fa-eye-slash"></i></button>
             </div>
-            <button class="btn2" onclick="signIn()">Sign In</button>
+            <p class="wrong">Incorrect Password</p>
+            <button name="" class="btn2" onclick="signIn()">Sign In</button>
             <p>Not a member?<a href="index.html"> Signup now</a></p>
         </main>
     </div>
